# Cloud-Custodain

./: .azure-pipelines.yml  .codecov.yml  .dockerignore  .drone.sec  .drone.yml  .gitignore  .tox.ini.swp  .travis.yml  Dockerfile  MAINTAINERS  Makefile  Makefile.sphinx  OWNERS.md  README.md  README.rst  architecture.html  azure-pipelines.yml  comparisons.html  developer.html  ec2.html  example.yml  filter-values.html  genindex.html  hello.yml  index.html  lambda.html  marker  notes.txt  objects.inv  offhours.html  ops.md  overview.html  py-modindex.html  pyproject.toml  ratchet.py  ratchet.txt  requirements-dev.txt  requirements.txt  roadmap.html  run-pytest-py36.sh  (+5 more)
tools/c7n_gcp/: pyproject.toml  readme.md  requirements.txt  setup.py
tools/c7n_gcp/c7n_gcp/: actions.py  client.py  entry.py  filters.py  handler.py  mu.py  output.py  policy.py  provider.py  query.py
tools/c7n_gcp/tests/: __init__.py  common.py  gcp_common.py  recorder.py  test_appengine.py  test_bigquery.py  test_cloudbilling.py  test_cloudfunction.py  test_compute.py  test_cscc.py  test_dataflow.py  test_deploymentmanager.py  test_dns.py  test_gcp_iam.py  test_gcp_labels.py  test_gcp_storage.py  test_gke.py  test_inventory.py  test_kms.py  test_loadbalancer.py  test_loadbalancing.py  test_logging.py  test_mlengine.py  test_mu_gcp.py  test_network.py  test_notify_gcp.py  test_output_gcp.py  test_pubsub.py  test_query.py  test_report.py  test_resource.py  test_resourcemanager.py  test_service.py  test_spanner.py  test_sql.py
tools/c7n_mailer/: Dockerfile  README-docker.md  README.md  example.yml  pyproject.toml  requirements.txt  setup.py
tools/c7n_mailer/c7n_mailer/: address.py  azure_queue_processor.py  cli.py  datadog_delivery.py  deploy.py  email_delivery.py  handle.py  ldap_lookup.py  processor.py  record.py  replay.py  sendgrid_delivery.py  slack_delivery.py  smtp_delivery.py  sns_delivery.py  splunk_delivery.py  (+5 more)
(+4603 files in other folders)
